<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <!-- الصف الأول: Total Price و Status -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price2"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>
                <TextView
                    android:id="@+id/text_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>
                <TextView
                    android:id="@+id/text_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- الصف الثاني: تاريخ الإنشاء -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creation_date"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"/>
                <TextView
                    android:id="@+id/text_creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textSize="18sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- قائمة أنواع النفايات -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waste_types"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_waste_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>
</LinearLayout>
